--- a/Lesson1/index.html
+++ b/Lesson1/index.html
@@ -52,12 +52,12 @@
     // console.log (typeof c);
 
 
-    let firstName = prompt("Введіть ваше ім'я");
-    console.log(firstName);
-    let middleName = prompt("Введіть ваше по-батькові");
-    console.log(middleName);
-    let age = prompt("Ваш вік");
-    console.log(age);
+    // let firstName = prompt("Введіть ваше ім'я");
+    // console.log(firstName);
+    // let middleName = prompt("Введіть ваше по-батькові");
+    // console.log(middleName);
+    // let age = prompt("Ваш вік");
+    // console.log(age);
 </script>
 </body>
 </html>
